--- a/411203364.html
+++ b/411203364.html
@@ -9,10 +9,10 @@
 	<h1>楊靖惠</h1>
 	<h2>Jing-Hui Yang</h2>
 
-	個人網頁：file:///C:/Users/student/Desktop/411203364.html<br>
-	IG：https://www.instagram.com/yjh_516/<br>
-	Tel: 0906589503<br>
-	E-Mail: jing050916@gmail.com<br>
+	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
+	IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
+	Tel: <a href="tel:0906589503">0906589503</a><br>
+	E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
 
 </body>
 </html>
