--- a/411203364.html
+++ b/411203364.html
@@ -6,6 +6,7 @@
 	<title>楊靖惠的簡介</title>
 </head>
 <body>
+	<img src="cliff.jpg"></img>
 	<h1>楊靖惠</h1>
 	<h2>Jing-Hui Yang</h2>
 
@@ -13,6 +14,13 @@
 	IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
 	Tel: <a href="tel:0906589503">0906589503</a><br>
 	E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
+    大象席地而坐電影配樂<br>
+	<audio controls>
+		<source src="elephant.mp3" type="audio/mP3">
+	</audio><br>
+
+	不要去臺灣<br>
+	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 
 </body>
 </html>
