--- a/411203364.html
+++ b/411203364.html
@@ -6,21 +6,40 @@
 	<title>楊靖惠的簡介</title>
 </head>
 <body>
-	<img src="cliff.jpg"></img>
-	<h1>楊靖惠</h1>
-	<h2>Jing-Hui Yang</h2>
+	<table width="70%">
 
-	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
-	IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
-	Tel: <a href="tel:0906589503">0906589503</a><br>
-	E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
-    大象席地而坐電影配樂<br>
-	<audio controls>
-		<source src="elephant.mp3" type="audio/mP3">
-	</audio><br>
+		<tr>
+			<td><img src="cliff.jpg"width="110%"></img></td>
 
-	不要去臺灣<br>
-	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+			<td>
+				<h1>楊靖惠</h1>
+				<h2>Jing-Hui Yang</h2>
+			</td>
+		</tr>
 
+	</table>
+	<table width="70%" border="1">
+		<tr>
+			<td>
+				個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
+				IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
+				Tel: <a href="tel:0906589503">0906589503</a><br>
+				E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
+			</td>
+
+			<td>
+				大象席地而坐電影配樂<br>
+				<audio controls>
+				<source src="elephant.mp3" type="audio/mP3">
+				</audio><br>
+			</td>
+
+			<td>
+				不要去臺灣<br>
+				<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+			</td>
+		</tr>
+		</table>	
+	
 </body>
 </html>
