--- a/411203364.html
+++ b/411203364.html
@@ -4,6 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>楊靖惠的簡介</title>
+
+	<style type="text/css">
+		* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
+		h1 {color:pink; font-size:60px;}
+		h2 {color:#FFEE99; font-size:40px;}
+	</style>
+
 </head>
 <body>
 	<table width="70%">
