--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>楊靖惠首頁</title>
+
+	<style type="text/css">
+		* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
+		</style>
 </head>
 <body>
 
 	<a href="411203364.html" target="me">關於靖惠</a><br>
 	<a href="https://www.104.com.tw/" target="me">104人力銀行</a><br>
-	<iframe width=800 height=600 
+	<iframe 
 	src="https://youtu.be/goSFsyxsx6c?si=tTWCYDCkSlzzIK6g" 
 	name="me"
+	style="width:100%; height:100vh" 
 	>
 
 	</iframe>
