--- a/411203364.html
+++ b/411203364.html
@@ -11,16 +11,29 @@
 		h2 {color:#FFEE99; font-size:40px;}
 	</style>
 
+	<script>
+		function change1() {
+  			document.getElementById("pic").src = "mountain.jpg";
+  			document.getElementById("h2text").innerText = "靜宜資管";
+		}
+
+		function change2() {
+  			document.getElementById("pic").src = "cliff.jpg";
+  			document.getElementById("h2text").innerText = "Jing-Hui Yang";
+		}
+	</script>
+
+
 </head>
 <body>
 	<table width="70%">
 
 		<tr>
-			<td><img src="cliff.jpg"width="110%"></img></td>
+			<td><img src="cliff.jpg"width="110%"id="pic" onmouseover="change1()" onmouseout="change2()"></img></td>
 
 			<td>
 				<h1>楊靖惠</h1>
-				<h2>Jing-Hui Yang</h2>
+				<h2 id="h2text">Jing-Hui Yang</h2>
 			</td>
 		</tr>
 
