--- a/rwd.html
+++ b/rwd.html
@@ -25,54 +25,24 @@
 
 
 </head>
-<body>
-	<table width="70%">
+<img src="cliff.jpg" width="110%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 
-		<tr>
-			<td><img src="cliff.jpg"width="110%"id="pic" onmouseover="change1()" onmouseout="change2()"></img></td>
+	<h3>楊靖惠(Jing-Hui Yang)</h3>
+	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
+			IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
+			Tel: <a href="tel:0906589503">0906589503</a><br>
+			E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
 
-			<td>
-				<h1>楊靖惠</h1>
-				<h2 id="h2text">Jing-Hui Yang</h2>
-			</td>
-		</tr>
+	<h3>電影配樂</h3>
+	大象席地而坐電影配樂<br>
+	<audio controls>
+		<source src="elephant.mp3" type="audio/mP3">
+	</audio><br>
 
-	</table>
-	<table width="70%" border="1">
-		<tr>
-			<td>
-				個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
-				IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
-				Tel: <a href="tel:0906589503">0906589503</a><br>
-				E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
-			</td>
+	<h3>推薦影片</h3>
+	不要去臺灣<br>
+	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 
-			<td>
-				大象席地而坐電影配樂<br>
-				<audio controls>
-				<source src="elephant.mp3" type="audio/mP3">
-				</audio><br>
-			</td>
-
-			<td>
-				不要去臺灣<br>
-				<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
-			</td>
-		</tr>
-		</table>
-		<table width="70%" border="1">
-			<tr>
-				<td>
-					聊天機器人<br>
-					<iframe
-    				allow="microphone;"
-    				width="350"
-   					height="430"
-    				src="https://console.dialogflow.com/api-client/demo/embedded/323b3ad9-a66f-4639-842b-6b65c8c68f68">
-</iframe>
-				</td>
-			</tr>
-		</table>	
-	
 </body>
+
 </html>
