--- a/rwd.html
+++ b/rwd.html
@@ -26,15 +26,15 @@
 
 </head>
 <body>
-
+	<nav>
 	<ul>
 		<li><a href="#jhyang">關於我</a></li>
 		<li><a href="#soundtrack">電影配樂</a></li>
 		<li><a href="#youtube">推薦影片</a></li>
 	</ul>
+	</nav>
 
-
-
+<main>
 <img src="cliff.jpg" width="110%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 
 	<h3 id="jhyang">楊靖惠(Jing-Hui Yang)</h3>
@@ -52,6 +52,11 @@
 	<h3 id="youtube">推薦影片</h3>
 	不要去臺灣<br>
 	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+</main>
+
+	<footer>
+		Copyright ©  楊. All Rights Reserved.
+	</footer>
 
 </body>
 
