--- a/rwd.html
+++ b/rwd.html
@@ -10,6 +10,8 @@
 		h1 {color:pink; font-size:60px;}
 		h2 {color:#FFEE99; font-size:40px;}
 	</style>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 	<script>
 		function change1() {
@@ -34,8 +36,12 @@
 	</ul>
 	</nav>
 
-<main>
+<main class="container-fluid bg-primary text-white text-center">
 <img src="cliff.jpg" width="110%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
+
+<div class="row">
+
+			<section class="col-lg-4">
 
 	<h3 id="jhyang">楊靖惠(Jing-Hui Yang)</h3>
 	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
@@ -43,19 +49,31 @@
 			Tel: <a href="tel:0906589503">0906589503</a><br>
 			E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
 
+</section>
+
+			<section class="col-lg-4">
+
 	<h3 id="soundtrack">電影配樂</h3>
 	大象席地而坐電影配樂<br>
 	<audio controls>
 		<source src="elephant.mp3" type="audio/mP3">
 	</audio><br>
 
+</section>
+
+			<section class="col-lg-4">
+
 	<h3 id="youtube">推薦影片</h3>
 	不要去臺灣<br>
 	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+	
+	</section>
+
+		</div>		
 </main>
 
 	<footer>
-		Copyright ©  楊. All Rights Reserved.
+		Copyright ©  楊靖惠. All Rights Reserved.
 	</footer>
 
 </body>
