--- a/rwd.html
+++ b/rwd.html
@@ -9,6 +9,8 @@
 		* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
 		h1 {color:pink; font-size:60px;}
 		h2 {color:#FFEE99; font-size:40px;}
+		.col-lg-4 {border: 1px solid;}
+
 	</style>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -28,7 +30,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg bg-light">
+	<nav class="navbar navbar-expand-lg bg-secondary navbar-dark"> 
 		<a class="navbar-brand">導覽列</a>
 	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#ITEMS">
 		<span class="navbar-toggler-icon"></span>
@@ -47,7 +49,7 @@
 
 	</nav>
 
-<main class="container-fluid bg-primary text-white text-center">
+<main class="container-fluid bg-success text-white text-center">
 <img src="cliff.jpg" class="img-fluid rounded-circle"width="50%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 
 <div class="row">
@@ -55,10 +57,10 @@
 			<section class="col-lg-4">
 
 	<h3 id="jhyang">楊靖惠(Jing-Hui Yang)</h3>
-	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html">file:///C:/Users/student/Desktop/411203364.html</a><br>
-			IG：<a href="https://www.instagram.com/yjh_516/"target="_blank">https://www.instagram.com/yjh_516/</a><br>
-			Tel: <a href="tel:0906589503">0906589503</a><br>
-			E-Mail: <a href="mailto:jing050916@gmail.com"> jing050916@gmail.com</a><br>
+	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html"class="text-decoration-none text-white bg-info">file:///C:/Users/student/Desktop/411203364.html</a><br>
+			IG：<a href="https://www.instagram.com/yjh_516/"target="_blank"class="text-decoration-none text-white bg-info">https://www.instagram.com/yjh_516/</a><br>
+			Tel: <a href="tel:0906589503"class="text-decoration-none text-white bg-info">0906589503</a><br>
+			E-Mail: <a href="mailto:jing050916@gmail.com"class="text-decoration-none text-white bg-info"> jing050916@gmail.com</a><br>
 
 </section>
 
