--- a/rwd.html
+++ b/rwd.html
@@ -57,10 +57,10 @@
 			<section class="col-lg-4">
 
 	<h3 id="jhyang">楊靖惠(Jing-Hui Yang)</h3>
-	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html"class="text-decoration-none text-white bg-info">file:///C:/Users/student/Desktop/411203364.html</a><br>
-			IG：<a href="https://www.instagram.com/yjh_516/"target="_blank"class="text-decoration-none text-white bg-info">https://www.instagram.com/yjh_516/</a><br>
-			Tel: <a href="tel:0906589503"class="text-decoration-none text-white bg-info">0906589503</a><br>
-			E-Mail: <a href="mailto:jing050916@gmail.com"class="text-decoration-none text-white bg-info"> jing050916@gmail.com</a><br>
+	個人網頁：<a href="file:///C:/Users/student/Desktop/411203364.html"class="text-decoration-none text-white bg-dark">file:///C:/Users/student/Desktop/411203364.html</a><br>
+			IG：<a href="https://www.instagram.com/yjh_516/"target="_blank"class="text-decoration-none text-white bg-dark">https://www.instagram.com/yjh_516/</a><br>
+			Tel: <a href="tel:0906589503"class="text-decoration-none text-white bg-dark">0906589503</a><br>
+			E-Mail: <a href="mailto:jing050916@gmail.com"class="text-decoration-none text-white bg-dark"> jing050916@gmail.com</a><br>
 
 </section>
 
